# f21-assignments

./: .gitignore  README.md  SETUP.md
assignment-0/: README.md
assignment-1/: README.md  install_ros_noetic.sh
assignment-1/shutter_lookat/: CMakeLists.txt  README.md
assignment-1/shutter_poses_tests/: CMakeLists.txt  package.xml
assignment-1/shutter_poses_tests/test/: test_pose_switcher_public.launch  test_pose_switcher_public.py
assignment-2/: ExtraQuestions-CPSC559.md  README.md
assignment-2/calibration/: calibrate_K.py  correspondences.txt  test_calibrate_K.py
assignment-2/depth/: process_images.py  save_images.py  test_depth.py
assignment-2/shutter_lookat/: README.md  package.xml
assignment-2/shutter_lookat_public_tests/: package.xml
assignment-2/shutter_lookat_public_tests/test/: test_fancy_virtual_camera.launch  test_fancy_virtual_camera.py  test_publish_target.launch  test_publish_target.py  test_virtual_camera.launch  test_virtual_camera.py
assignment-2/shutter_track_target/: CMakeLists.txt
assignment-3/: ExtraQuestions-CPSC559.md  README.md  Train_Google_Cloud_Engine.md  Train_Google_Colab.md
assignment-3/calibration/: calibrate_K.py  correspondences.txt  test_calibrate_K.py
assignment-3/depth/: extract_coordinates.py  process_images.py  save_images.py  test_depth.py
assignment-3/shutter_lookat/: CMakeLists.txt  (+1 more)
assignment-4/:  ExtraQuestions-CPSC559.md  ExtraQuestions-CPSC559.md  README.md  Train_AWS.md  Train_Google_Cloud_Engine.md  Train_Google_Colab.md  install_python_deps.sh
assignment-5/: README.md  RoboMaker_Resources.md  Train_AWS.md  Train_Google_Cloud_Engine.md  Train_Google_Colab.md  install_python_deps.sh
(+87 files in other folders)
