<?xml version="1.0"?>
<package format="2">
  <name>shutter_poses_tests</name>
  <version>0.0.1</version>
  <description>ROS tests for assignment 2</description>
  <maintainer email="marynel.vazquez@yale.edu">Marynel Vazquez</maintainer>
  <author>Sydney Thompson</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rostest</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
